<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BBallTeamManager</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="button_create_team">Create Team</string>
    <string name="button_delete_team">Delete Team</string>
    <string name="button_edit_team">Edit Team</string>
    <string name="title_activity_create_team">Create Team</string>
    <string name="title_activity_add_player">Add Player</string>
    <string name="team_name">Team Name</string>
    <string name="save">Save</string>
    <string name="title_player_list">Players</string>
    <string name="title_player_detail">Player Detail</string>
    <string name="button_add_player">Add Player</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="middle_name">Middle Name</string>
	<string name="position_prompt">Choose A Position</string>
    <string name="parent_name1">Primary Parent</string>
    <string name="parent_phone1">Primary Phone</string>
    <string name="parent_email1">Primary Email</string>
    <string name="parent_name2">Secondary Parent</string>
    <string name="parent_phone2">Secondary Phone</string>
    <string name="parent_email2">Secondary Email</string>
    <string name="jersey">Jersey Number</string>
    
    <string-array name="positions" >
        <item>Position</item>
        <item>Guard</item>
        <item>Point Gaurd</item>
        <item>Shooting Guard</item>
        <item>Forward</item>
        <item>Power Forward</item>
        <item>Small Forward</item>
        <item>Center</item>
    </string-array>
    
</resources>
